2006-09-04  Michael Natterer  <mitch@gimp.org>

	* app/paint/paint-enums.[ch]: removed enum GimpHealAlignMode, we
	use the GimpSourceAlignMode now and can always disable REGISTERED
	in the GUI should it turn out to be really totally pointless.

	* app/paint/Makefile.am
	* app/paint/gimphealoptions.[ch]: removed. Its properties are
	completely covered by GimpSourceOptions.

	* app/paint/gimpheal.[ch]: derive from GimpSourceCore.

	* app/tools/gimphealtool.[ch]: derive from GimpSourceTool.

2006-09-04  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added the Heal tool to the Tools menu.

2006-09-04  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/tools/stock-tool-heal*: touch up the heal
	brush tool icon

2006-09-04  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: only run the idle swapper if needed and
	use a lower priority for the timeout.

2006-09-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/Makefile.am
	* app/tools/gimpsourcetool.[ch]: new class which is essentially a
	copy of GimpCloneTool with s/clone/source/ plus some minor
	modifications.

	* app/tools/gimpclonetool.[ch]: remove almost everything and
	derive from GimpSourceTool.

2006-09-03  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/palette-import-dialog.[ch]: removed
	palette_import_dialog_show() and palette_import_dialog_destroy()
	and don't remember the created dialog internally. Instead, made
	palette_import_dialog_new() public.

	* app/dialogs/dialogs.c
	* app/dialogs/dialogs-constructors.[ch]: register it with the
	toplevel dialog factory as singleton toplevel.

	* app/actions/palettes-commands.c (palettes_import_cmd_callback):
	use the dialog factory to create the palette import dialog.

2006-09-03  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpsourceoptions.[ch] (struct GimpSourceOptions): added
	non-property boolean member "use_source" which defalts to TRUE.

	* app/paint/gimpcloneoptions.c: imeplement GObject::notify() and